--- a/index.html
+++ b/index.html
@@ -123,7 +123,57 @@
                         </div>
                     </div>
                 </div>
+                <div class="detail">
+                    <div class="description">
+                      <p class="paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing 
+                        elit. Animi nisi dignissimos debitis 
+                        ratione sapiente saepe. Accusantium cumque, quas, 
+                        ut corporis incidunt deserunt quae architecto voluptate.
+                    </p>
+                    <p class="paragraph"> 
+                        Accusantium cumque, quas, ut corporis incidunt deserunt 
+                        quae architecto voluptate delectus, inventore iure aliquid aliquam.
 
+                    </p>
+                    <ul class="list">
+                       <li class="list__item">Close to the beach</li>
+                       <li class="list__item">Breakfast included</li>
+                       <li class="list__item">Free airport shuttle</li>
+                       <li class="list__item">Free wifi in all rooms</li>
+                       <li class="list__item">Air conditioning and heating</li>
+                       <li class="list__item">Pets allowed</li>
+                       <li class="list__item">We speak all leanguages </li>
+                       <li class="list__item">Perfect for families</li>
+                    </ul>
+                    <div class="reccomend">
+                        <p class="reccomend__count">
+                            Lucy and 3 other friends reccomend this hotel
+                        </p>
+                        <div class="reccomend__friends">
+                            <img src="img/user-3.jpg" alt="User 3" class="reccomend__photo">
+                            <img src="img/user-4.jpg" alt="User 3" class="reccomend__photo">
+                            <img src="img/user-5.jpg" alt="User 3" class="reccomend__photo">
+                            <img src="img/user-6.jpg" alt="User 3" class="reccomend__photo">
+                        </div>
+                    </div>
+                    </div>
+                    <div class="user-reviews">
+                      <figure class="review">
+                          <blockquote class="review__text">
+                            Lorem ipsum dolor sit amet, consectetur 
+                            adipisicing elit. Fuga doloremque architecto 
+                            dicta animi, totam, itaque officia ex. 
+                          </blockquote>
+                      </figure>
+                      <figure class="review">
+                           <blockquote class="review__text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                             Fuga doloremque architecto dicta animi.
+                           </blockquote>
+                      </figure>
+                    </div>
+                </div>
             </main>
         </div>
     </div>
