--- a/index.html
+++ b/index.html
@@ -125,55 +125,81 @@
                 </div>
                 <div class="detail">
                     <div class="description">
-                      <p class="paragraph">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing 
-                        elit. Animi nisi dignissimos debitis 
-                        ratione sapiente saepe. Accusantium cumque, quas, 
-                        ut corporis incidunt deserunt quae architecto voluptate.
-                    </p>
-                    <p class="paragraph"> 
-                        Accusantium cumque, quas, ut corporis incidunt deserunt 
-                        quae architecto voluptate delectus, inventore iure aliquid aliquam.
-
-                    </p>
-                    <ul class="list">
-                       <li class="list__item">Close to the beach</li>
-                       <li class="list__item">Breakfast included</li>
-                       <li class="list__item">Free airport shuttle</li>
-                       <li class="list__item">Free wifi in all rooms</li>
-                       <li class="list__item">Air conditioning and heating</li>
-                       <li class="list__item">Pets allowed</li>
-                       <li class="list__item">We speak all leanguages </li>
-                       <li class="list__item">Perfect for families</li>
-                    </ul>
-                    <div class="reccomend">
-                        <p class="reccomend__count">
-                            Lucy and 3 other friends reccomend this hotel
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit. Animi nisi dignissimos debitis
+                            ratione sapiente saepe. Accusantium cumque, quas,
+                            ut corporis incidunt deserunt quae architecto voluptate.
                         </p>
-                        <div class="reccomend__friends">
-                            <img src="img/user-3.jpg" alt="User 3" class="reccomend__photo">
-                            <img src="img/user-4.jpg" alt="User 3" class="reccomend__photo">
-                            <img src="img/user-5.jpg" alt="User 3" class="reccomend__photo">
-                            <img src="img/user-6.jpg" alt="User 3" class="reccomend__photo">
+                        <p class="paragraph">
+                            Accusantium cumque, quas, ut corporis incidunt deserunt
+                            quae architecto voluptate delectus, inventore iure aliquid aliquam.
+
+                        </p>
+                        <ul class="list">
+                            <li class="list__item">Close to the beach</li>
+                            <li class="list__item">Breakfast included</li>
+                            <li class="list__item">Free airport shuttle</li>
+                            <li class="list__item">Free wifi in all rooms</li>
+                            <li class="list__item">Air conditioning and heating</li>
+                            <li class="list__item">Pets allowed</li>
+                            <li class="list__item">We speak all leanguages </li>
+                            <li class="list__item">Perfect for families</li>
+                        </ul>
+                        <div class="reccomend">
+                            <p class="reccomend__count">
+                                Lucy and 3 other friends reccomend this hotel
+                            </p>
+                            <div class="reccomend__friends">
+                                <img src="img/user-3.jpg" alt="User 3" class="reccomend__photo">
+                                <img src="img/user-4.jpg" alt="User 3" class="reccomend__photo">
+                                <img src="img/user-5.jpg" alt="User 3" class="reccomend__photo">
+                                <img src="img/user-6.jpg" alt="User 3" class="reccomend__photo">
+                            </div>
                         </div>
                     </div>
-                    </div>
                     <div class="user-reviews">
-                      <figure class="review">
-                          <blockquote class="review__text">
-                            Lorem ipsum dolor sit amet, consectetur 
-                            adipisicing elit. Fuga doloremque architecto 
-                            dicta animi, totam, itaque officia ex. 
-                          </blockquote>
-                      </figure>
-                      <figure class="review">
-                           <blockquote class="review__text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                             Fuga doloremque architecto dicta animi.
-                           </blockquote>
-                      </figure>
+                        <figure class="review">
+                            <blockquote class="review__text">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit. Fuga doloremque architecto
+                                dicta animi, totam, itaque officia ex.
+                            </blockquote>
+                            <figcaption class="review__user">
+                                <img src="img/user-1.jpg" alt="user-1" class="review__photo">
+                                <div class="review__user-box">
+                                    <p class="review__user-name">Nick Smith</p>
+                                    <p class="review__user-date">June 28th, 2020</p>
+                                </div>
+                                <div class="review__rating">8</div>
+                            </figcaption>
+                        </figure>
+                        <figure class="review">
+                            <blockquote class="review__text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Fuga doloremque architecto dicta animi.
+                            </blockquote>
+                            <figcaption class="review__user">
+                                <img src="img/user-2.jpg" alt="user-1" class="review__photo">
+                                <div class="review__user-box">
+                                    <p class="review__user-name">Annika Kuznetsov</p>
+                                    <p class="review__user-date">april 5th, 2020</p>
+                                </div>
+                                <div class="review__rating">9.3</div>
+                            </figcaption>
+                        </figure>
+                        <button class="btn-inline">Show all <span>&rarr;</span> </button>
                     </div>
+                   
+                    </div>
+                    <div class="cta">
+                        <h2 class="cta__book-now">Good news we have 4 free rooms for the selected dates!</h2>
+                        <button class="btn">
+                            <span class="btn__visible">Book Now</span>
+                            <span class="btn__invisible">Only 4 rooms left</span>
+                        </button>
                 </div>
+               
             </main>
         </div>
     </div>
